# llm-api

./: pyproject.toml  requirements.txt
llm_api/: __init__.py  abc.py  anthropic_api.py  groq_api.py  ollama_api.py  openrouter_api.py  text.py  types_request.py  types_response.py
llm_api/tests/: helpers.py  test_abc.py  test_anthropic_api.py  test_groq_api.py  test_ollama_api.py  test_openrouter_api.py
src/llm_api/: __init__.py  openrouter_api.py  types_request.py  types_response.py  types_tools.py
