[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-api"
version = "0.1.0"
authors = [{name = "Tomi Javanainen", email = "tomi.javanainen@gmail.com"}]
description = "A simple wrapper over LLM APIs"
license = {file = "LICENSE"}
dependencies = [
    "requests",
    "python-dotenv",
    "colorama",
]
